<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/audi_mexico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_conocenos"
        android:onClick="onClick"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:text="@string/btn_aboutus"
        android:textAlignment="textEnd"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foto"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/btn_noticias"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:onClick="onClick"
        android:text="@string/btn_news"
        android:textAlignment="textEnd"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/btn_bolsa_de_trabajo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:onClick="onClick"
        android:text="@string/btn_jobs"
        android:textAlignment="textEnd"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/btn_soporte_tecnico"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:onClick="onClick"
        android:text="@string/btn_support"
        android:textAlignment="textEnd"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/icono_flecha_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_bolsa_de_trabajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btn_bolsa_de_trabajo"
        app:layout_constraintTop_toTopOf="@+id/btn_bolsa_de_trabajo"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:onClick="onClick"
        android:text="@string/btn_login"
        android:textAlignment="textEnd"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/icono_flecha_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.521"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/icono_flecha_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_soporte_tecnico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btn_soporte_tecnico"
        app:layout_constraintTop_toTopOf="@+id/btn_soporte_tecnico"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/icono_flecha_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_noticias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btn_noticias"
        app:layout_constraintTop_toTopOf="@+id/btn_noticias"
        app:layout_constraintVertical_bias="0.391"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:src="@drawable/icono_flecha_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_conocenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btn_conocenos"
        app:layout_constraintTop_toTopOf="@+id/btn_conocenos"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>